--- a/libs/pipes/package.json
+++ b/libs/pipes/package.json
@@ -8,5 +8,17 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "homepage": "https://github.com/maicongodinho/ngx-armory/blob/main/libs/pipes/README.md",
+  "keywords": [
+    "angular",
+    "pipes",
+    "util"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maicongodinho/ngx-armory.git",
+    "directory": "libs/pipes"
+  }
 }
